[package]
name = "gongniuai_bot"
description = "I'm gongniuai ICP, Digital pgongniuai 🐼 by gongniuai framework. Secured in TEE, memories on ICP chain.✨"
publish = false
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
gongniuai_core = { path = "../../gongniuai_core", version = "0.3" }
gongniuai_engine = { path = "../../gongniuai_engine", version = "0.3" }
gongniuai_lancedb = { path = "../../gongniuai_lancedb", version = "0.1" }
gongniuai_icp = { path = "../../tools/gongniuai_icp", version = "0.2" }
axum = { workspace = true }
axum-server = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
http = { workspace = true }
object_store = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic_object_store = { workspace = true }
ic-agent = { workspace = true }
ic_tee_agent = { workspace = true }
ic_tee_cdk = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
moka = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
ed25519-consensus = { workspace = true }
agent-twitter-client = { git = "https://github.com/ldclabs/agent-twitter-client.git", rev = "717bd0d8dc4febfece0065c972801924ecae2639" }
config = "0.15"

[dev-dependencies]
dotenv = { workspace = true }
